--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         }
     }
 }
-
+def architectureComponentVersion = "1.0.0"
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -35,4 +35,8 @@ dependencies {
 
     //Stetho
     compile 'com.facebook.stetho:stetho:1.5.0'
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$architectureComponentVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$architectureComponentVersion"
+    implementation 'android.arch.paging:runtime:1.0.0-alpha3'
 }
